yamls/traefik/example/errrTest/traefik-ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-errpage
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
          #  - match: Host(`octa8lab.cn`) && PathPrefix(`/tls`)
  - match: Host(`192.168.1.96`) 
    kind: Rule
    middlewares:
    - name: traefik-errpage
    services:
    - name: prometheus-svc
      port: 9090
      kind: Service
      namespace: monitoring
